fix: add gaps between cards in part Our friends

--- a/shelter/pages/main/style.css
+++ b/shelter/pages/main/style.css
@@ -192,6 +192,7 @@ body {
 }
 .ourFrends__cards {
   display: flex;
+  gap: 90px;
   max-width: 990px;
   justify-content: space-between;
   text-align: center;
